@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<form>
+<form col="6">
     <label name="country"/>
     <field name="country"/>
     <newline/>
@@ -9,6 +9,8 @@ this repository contains the full copyright notices and license terms. -->
     <field name="name"/>
     <label name="code"/>
     <field name="code"/>
+    <label name="active"/>
+    <field name="active"/>
     <label name="type"/>
     <field name="type"/>
     <label name="parent"/>
